--- a/lvn/test/turnt.toml
+++ b/lvn/test/turnt.toml
@@ -1,1 +1,2 @@
-command = "bril2json < {filename} | python3 ../../lvn.py {args} | bril2txt"
+command = "bril2json < {filename} > tmp; go run ../lvn.go tmp | bril2txt; rm tmp;"
+
